test: update all testes